--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>login page</title>
     <link rel="stylesheet" href="./assets/css/index.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=mail" />
@@ -43,8 +43,7 @@
             </form>
             <a href="">mot de passe oublier ?</a>
             <div class="divbutton">
-                <input3 type="submit" value="connexin">
-                <button type="submit">
+            <button type="submit">
                     Connexion
                 </button>
             </div>
